first page done

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
             <div class="sub-item">
               <h4>Подписка Максимум</h4>
-              <span>299$ -  месяц</span>
+              <span>299$ - месяц</span>
               <p>
                 Доступно: Каталог игр Виртуальный ПК Безлимитная игровая сессия
               </p>
@@ -205,18 +205,84 @@
             </div>
             <div class="sub-item">
               <h4>Подписка Минимум</h4>
-              <span> 150$  -  месяц </span>
-              <p>
-                Доступно:
-                Каталог игр
-                Игровая сессия 4 часов/день
-              </p>
+              <span> 150$ - месяц </span>
+              <p>Доступно: Каталог игр Игровая сессия 4 часов/день</p>
               <button>Выбрать</button>
             </div>
           </div>
         </div>
       </div>
+      <div class="example">
+        <div class="container">
+          <div class="example-img">
+            <img src="./img/example01.png" alt="" />
+            <img src="./img/example02.png" alt="" />
+            <img src="./img/example03.png" alt="" />
+          </div>
+          <div class="example-text">
+            <div class="title">
+              <div class="before-title">
+                <div class="line"></div>
+                <div class="text">Играть можно в браузере</div>
+              </div>
+              <div class="main-title">
+                <h2>Запускайте на любых устройствах</h2>
+              </div>
+            </div>
+            <div class="instriction">
+              <p>
+                Наш модуль доступен на все популярные ОС и работает на всех
+                компьютерах.
+              </p>
+            </div>
+            <div class="download">
+              <span> Открыть в браузере </span>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+    <footer>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"
+              ><img src="./img/Group 6.png" alt="" /></a
+            >
+            <ul class="nav d-flex gap-2">
+              <li class="nav-item d-flex ">
+                <a class="nav-link active" aria-current="page" href="#">2022. All rights reserved.</a>
+                <a class="nav-link" href="#">Design by desart</a>
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+
+              <li class="nav-item d-flex gap-3">
+                <span class="navbar-text"> Политика конфиденциальности </span>
+                <span class="navbar-text"> Файлы Coocie </span>
+              </li>
+
+              <li class="nav-item d-flex">
+                <a class="nav-link" href="#"><i class="fa-brands fa-instagram fa-lg"style="color: #ffffff"></i
+                ></a>
+                <a class="nav-link" href="#"
+                ><i
+                  class="fa-brands fa-facebook fa-lg"
+                  style="color: #ffffff"
+                ></i
+              ></a>
+              <a class="nav-link" href="#"
+              ><i
+                class="fa-brands fa-twitter fa-lg"
+                style="color: #ffffff"
+              ></i
+            ></a>
+              </li>
+            
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </footer>
 
     <script src="./js/script.js"></script>
     <script src="./js/wow.min.js"></script>
